Allow sensor-upgrader to use SCCs and PSPs of sensor (stackrox/rox#3388)

--- a/image/templates/kubernetes/kubectl/sensor-pod-security.yaml
+++ b/image/templates/kubernetes/kubectl/sensor-pod-security.yaml
@@ -29,6 +29,9 @@ subjects:
   - kind: ServiceAccount
     name: sensor
     namespace: stackrox
+  - kind: ServiceAccount
+    name: sensor-upgrader
+    namespace: stackrox
 ---
 apiVersion: extensions/v1beta1
 kind: PodSecurityPolicy
