--- a/image/Dockerfile_gcp
+++ b/image/Dockerfile_gcp
@@ -1,7 +1,7 @@
 FROM gcr.io/cloud-marketplace-tools/k8s/deployer_helm:0.7.9
 
 RUN apt-get -y update \
- && apt-get install -y --no-install-recommends curl=7.52.1-5+deb9u9 unzip=6.0-21+deb9u1 \
+ && apt-get install -y --no-install-recommends curl=7.52.1-5+deb9u9 unzip \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
