--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -91,8 +91,12 @@ dependencies {
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.0'
     testCompile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-    testCompile group: 'com.codepine.api', name: 'testrail-api-java-client', version: '2.0.0'
+    compile group: 'com.codepine.api', name: 'testrail-api-java-client', version: '2.0.1'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
+
+    //jsoup for testrailupdater
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+
 }
 
 
@@ -132,6 +136,12 @@ test {
     outputs.upToDateWhen { false }
 }
 
+task updateTestRail(type: JavaExec) {
+    // Set main property to name of Groovy script class.
+    main = 'testrailupdater.TestRailUpdater'
 
+    // Set classpath for running the Groovy script.
+    classpath = sourceSets.main.runtimeClasspath
+}
 
 
