Cypress output test results (stackrox/rox#3470)

--- a/ui/cypress/mocha.config.json
+++ b/ui/cypress/mocha.config.json
@@ -1,6 +1,6 @@
 {
   "reporterEnabled": "spec, mocha-junit-reporter",
   "mochaJunitReporterReporterOptions": {
-    "mochaFile": "cypress/reports/cypress-results.xml"
+    "mochaFile": "cypress/reports/cypress-[hash]-results.xml"
   }
 }
