--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1421,6 +1421,11 @@ jobs:
 
       - teardown-gke
 
+      - run:
+          name:  Print cypress results??
+          command: |
+            cat ui/cypress/reports/*.xml
+
       - *storeCypressResults
       - *storeCypressScreenshots
       - *storeCypressVideos
