--- a/ui/package.json
+++ b/ui/package.json
@@ -4,12 +4,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "apollo-cache-inmemory": "^1.6.0",
-        "apollo-client": "^2.6.0",
-        "apollo-link": "^1.2.11",
+        "@types/react": "^16.8.0",
+        "apollo-cache": "^1.3.2",
+        "apollo-cache-inmemory": "^1.6.3",
+        "apollo-client": "^2.6.4",
+        "apollo-link": "^1.2.13",
         "apollo-link-context": "^1.0.17",
         "apollo-link-error": "^1.1.10",
         "apollo-link-http": "^1.5.14",
+        "apollo-utilities": "^1.3.2",
         "axios": "^0.18.1",
         "computed-style-to-inline-style": "^3.0.0",
         "cytoscape": "^3.5.0",
@@ -36,13 +39,13 @@
         "raven-for-redux": "^1.3.1",
         "raven-js": "^3.27.0",
         "rc-tooltip": "^3.7.3",
-        "react": "^16.8.6",
-        "react-apollo": "^2.3.3",
+        "react": "^16.9.0",
+        "react-apollo": "^3.1.0",
         "react-collapsible": "^2.6.0",
         "react-color": "^2.17.3",
         "react-copy-to-clipboard": "^5.0.1",
         "react-cytoscapejs": "^1.1.0",
-        "react-dom": "^16.8.6",
+        "react-dom": "^16.9.0",
         "react-dropzone": "^6.1.1",
         "react-feather": "^1.1.6",
         "react-modal": "^3.6.1",
@@ -76,7 +79,8 @@
         "styled-components": "^3.4.10",
         "tippy.js": "^4.3.2",
         "typeface-open-sans": "^0.0.54",
-        "typeface-open-sans-condensed": "^0.0.72"
+        "typeface-open-sans-condensed": "^0.0.72",
+        "typescript": "^3.6.2"
     },
     "scripts": {
         "start": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && HTTPS=true react-scripts start",
@@ -95,6 +99,9 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@apollo/react-testing": "^3.1.0",
+        "@testing-library/jest-dom": "^4.1.0",
+        "@testing-library/react": "^9.1.4",
         "cypress": "^3.1.5",
         "enzyme": "^3.9.0",
         "enzyme-adapter-react-16": "^1.13.2",
@@ -114,6 +121,7 @@
         "mocha-multi-reporters": "^1.1.7",
         "prettier": "1.15.3",
         "react-router-enzyme-context": "^1.2.0",
+        "react-test-renderer": "^16.9.0",
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
         "tailwindcss": "^0.7.2"
