Update to Go 1.13 (stackrox/rox#3422)
* Update the Go version in the base image.
* Update staticcheck to a version that understands go 1.13.
* Use go mod download instead of go get to fetch dependencies.
* Update go-vet.sh to take into account the new format of vet output.
* Add a workaround for a Go 1.13-specific issue in roxvet.
* Move all go build tools out of the CI base image. Rely on go.mod and the Makefile to install them.
* Point goveralls to a fork where it runs faster (3 seconds vs 3 minutes)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   docker:
-    - image: docker.io/stackrox/apollo-ci:0.1.11-34-gd4c412a947
+    - image: docker.io/stackrox/apollo-ci:0.2.0
       auth:
         username: $DOCKER_IO_PULL_USERNAME
         password: $DOCKER_IO_PULL_PASSWORD
@@ -1199,7 +1199,7 @@ jobs:
 
       - run:
           name: Generate JUnit reports
-          command: scripts/generate-junit-reports.sh
+          command: make generate-junit-reports
           when: always
 
       - store_test_results:
