--- a/ui/package.json
+++ b/ui/package.json
@@ -84,6 +84,7 @@
     },
     "scripts": {
         "start": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && HTTPS=true react-scripts start",
+        "start:watch": "npm-run-all --parallel watch:tailwind watch:react",
         "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && react-scripts build",
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
@@ -95,6 +96,8 @@
         "deploy": "../deploy/k8s/deploy.sh",
         "deploy-local": "../deploy/k8s/deploy-local.sh",
         "tailwind": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css",
+        "watch:tailwind": "postcss ./src/app.css -o ./src/index.css -w",
+        "watch:react": "HTTPS=true react-scripts start",
         "forward": "../scripts/port-forward-ui.sh",
         "eject": "react-scripts eject"
     },
@@ -119,6 +122,8 @@
         "mocha": "^5.2.0",
         "mocha-junit-reporter": "^1.22.0",
         "mocha-multi-reporters": "^1.1.7",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^6.1.3",
         "prettier": "1.15.3",
         "react-router-enzyme-context": "^1.2.0",
         "react-test-renderer": "^16.9.0",
