Various small Kops test fixes (stackrox/rox#3526)
- add jobs to deployment counts
- enable admission_controller for kops sensor deploy
- retry get call to flow deployment before skipping test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2043,6 +2043,7 @@ jobs:
       - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "https://influxdb.monitoring.ci.rox.systems"
       - ROX_WHITELIST_GENERATION_DURATION: 1m
+      - ADMISSION_CONTROLLER: true
 
     steps:
       - checkout
