ROX-3350 spike storybook with docs plugin (stackrox/rox#3515)
## Description

Scaffold out Storybook

## Testing Performed

Manual
Run `yarn storybook`

I think we may need to rethink our default button styles. We're relying on the caller/parent to supply "button looking" style a lot.
<img width="1124" alt="Screen Shot 2019-09-21 at 12 21 49 PM" src="https://user-images.githubusercontent.com/715729/65376314-688a8d00-dc6c-11e9-9b98-313675a541d8.png">

Good news is, I got theming to work, too.
![Screen Shot 2019-09-24 at 1 54 01 PM](https://user-images.githubusercontent.com/715729/65537554-6bd38200-ded3-11e9-96a7-27acafc1516b.png)

Commits:
* Bootstrap Storybook

* Add new files

* Fix peer dependencies

* Add storybook build command

* Add Button examples

* Fix prop-types lint errors

* Remove dependency cycles in TopNav

* Remove dependency cycles in LeftNav

* Finish fixing cyclical import lint errors

* Ensure compiled tailwind classes are available for eslint run, required by Storybook

* Bump version of rox-ui-deps in CircleCI config, to try to fix Cypress run

* Bump base image in CI to see whether that fixes Cypress in CI

* Add new helper function to default export object

* Update docker image tag for CI to 0.2.1, to handle Cypress 3.4.x

* Add storybook-addon-themes to make color vars work

* Fix lint errors

--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -33,6 +33,7 @@
     }],
 
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": [2, { "skipUndeclared": true }]
   }
 }
