--- a/ui/package.json
+++ b/ui/package.json
@@ -88,13 +88,15 @@
         "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && react-scripts build",
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
-        "lint": "NODE_PATH=src eslint src cypress",
+        "lint": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src eslint src cypress",
         "cypress-open": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) cypress open",
         "test-e2e-local": "CYPRESS_ROX_AUTH_TOKEN=(./scripts/get-auth-token.sh) cypress run",
         "test-e2e-ci": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
         "connect": "../scripts/connect-ui.sh ${1}",
         "deploy": "../deploy/k8s/deploy.sh",
         "deploy-local": "../deploy/k8s/deploy-local.sh",
+        "storybook": "start-storybook",
+        "build-storybook": "build-storybook -c .storybook",
         "tailwind": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css",
         "watch:tailwind": "postcss ./src/app.css -o ./src/index.css -w",
         "watch:react": "HTTPS=true react-scripts start",
@@ -103,12 +105,14 @@
     },
     "devDependencies": {
         "@apollo/react-testing": "^3.1.0",
+        "@babel/core": "^7.0.1",
+        "@storybook/react": "^5.2.1",
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
         "cypress": "^3.1.5",
         "enzyme": "^3.9.0",
         "enzyme-adapter-react-16": "^1.13.2",
-        "eslint": "5.16.0",
+        "eslint": "^6.1.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-prettier": "4.3.0",
         "eslint-plugin-cypress": "2.2.1",
@@ -129,6 +133,7 @@
         "react-test-renderer": "^16.9.0",
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
+        "storybook-addon-themes": "^5.2.0",
         "tailwindcss": "^0.7.2"
     },
     "browserslist": [
